# oicopy

./: .gitignore  README.md  index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_info.rs  clipboard_management.rs  db.rs  lib.rs  main.rs  panel_window.rs  panel_window_copy.rs  performance_optimization.rs  settings.rs  test_db.rs
src/components/: AppIcon.jsx  AppInfoTest.jsx  CheckPermissions.jsx  DatabaseOptimization.jsx  HomePage.jsx  PanelPage.jsx  Settings.jsx  SettingsPage.jsx  VirtualClipboardCard.jsx  VirtualScrollContainer.jsx  ZoomableHTML.jsx
src/components/DatabaseOptimization/: ANIMATION_FIXES.md  CHANGELOG.md  MaintenanceStatusPanel.jsx  OperationPanels.jsx  PerformancePanel.jsx  README.md  StatisticsCards.jsx  TEST_REPORT.md  animations.css  hooks.js  index.jsx  usePerformanceMonitor.js  utils.js
src/context/: permissionContext.js
src/utils/: CacheTypes.js  ClipboardCacheManager.js  PerformanceMonitor.js  PreloadService.js  SyncQueue.js  appIcons.js  virtualScrollConfig.js
