[package]
name = "oicopy-tauri-nspanel"
version = "0.1.0"
description = "oicopy history management"
authors = ["oi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oicopy_tauri_nspanel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
tauri-plugin-clipboard = { git = "https://github.com/CrossCopy/tauri-plugin-clipboard", branch = "v2" }
cocoa = "0.26.1"
tauri-plugin-macos-permissions = "2.3.0"
objc2 = "0.6.1"
rusqlite = "0.37.0"
chrono = "0.4.41"
regex = "1.11.1"
once_cell = "1.21.3"
objc2-app-kit = "0.3.1"
tokio = { version = "1.0", features = ["time"] }
sha2 = "0.10"
base64 = "0.22"
image = "0.25"
icns = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
